<resources>
    <string name="app_name">book</string>
    <string name="flare_ebooks">Flare ebooks</string>
    <string name="act_like_lady_think_like_men">Act like lady think like men</string>
    <string name="mind_hacking">mind hacking</string>
    <string name="learn_to_earn">learn to earn</string>
    <string name="_365_dni">365 dni</string>
    <string name="welcome_flare_ebooks">Welcome Flare ebooks</string>
    <string name="go_to_adults_section">go to adults section</string>
    <string name="go_to_children_section">go to children section</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="welcome_in_adults_book_section">Welcome in adults book section</string>
    <string name="welcome_adults_section">Welcome adults section</string>
    <string name="todo6">TODO</string>
    <string name="welcome_in_children_section">Welcome in children section</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="create_your_account_with_facebook">Create your account with facebook</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="are_you_new_in_flare_ebooks">Are you new in Flare eBooks?</string>
    <string name="ebooks">Flare eBooks</string>
    <string name="forget_password1">Forget Password?</string>
    <string name="Email">email</string>
    <string name="Password">password</string>
    <string name="i_m_an_admin">I \'m an admin?</string>
    <string name="i_m_not_an_admin">I \'m not an admin?</string>
    <string name="flare">Flare</string>
    <string name="books">eBooks</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="where_you_are_planted">Where you are planted</string>
    <string name="already_have_an_account_SignIn" />
    <string name="add_new_products">Add new products</string>
    <string name="todo14">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="book_title">Book Title</string>
    <string name="book_detail">Book Detail</string>
    <string name="book_price">Book Price</string>
    <string name="add_shopping_cart">Add shopping cart</string>
    <string name="todo">TODO</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cart">Cart</string>
    <string name="quit">Quit</string>
    <string name="setting">Setting</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="user_name">User name</string>
    <string name="product_title">Book Title</string>
    <string name="todo23">TODO</string>
    <string name="product_detail">Book Detail</string>
    <string name="product_price">Book Price</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="email1">email</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
