<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/book_name"
        android:scaleType="centerCrop"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/todo23" />

    <TextView
        android:id="@+id/book_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_image"
        android:text="@string/book_detail"
        android:textAlignment="center"
        android:textSize="16sp"
         android:textStyle="bold"/>
    <TextView
    android:id="@+id/book_price"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/book_detail"
    android:text="@string/book_price"
    android:textAlignment="center"
    android:textSize="18sp"
    android:textStyle="bold"/>




</RelativeLayout>
</androidx.cardview.widget.CardView>