<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminAddNewProductActivity">

    <ImageView
        android:id="@+id/book_icon"
        android:layout_width="313dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/book_icon"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/book_title"
        android:layout_width="319dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/book_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/book_detail"
        android:layout_width="320dp"
        android:layout_height="79dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/book_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719"
        android:autofillHints="" />


    <EditText
        android:id="@+id/book_price"
        android:layout_width="317dp"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/book_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        android:autofillHints="" />

    <Button
        android:id="@+id/Add_New_Product"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:text="@string/add_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />
</androidx.constraintlayout.widget.ConstraintLayout>