<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminProductTypeActivity">

    <TextView
        android:id="@+id/logo_id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_products"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />


    <ImageView
        android:id="@+id/adults1"
        android:layout_width="145dp"
        android:layout_height="244dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        app:srcCompat="@drawable/adults1" />

    <ImageView
        android:id="@+id/adults2"
        android:layout_width="197dp"
        android:layout_height="226dp"
        android:contentDescription="@string/todo18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269"
        app:srcCompat="@drawable/adults2" />

    <ImageView
        android:id="@+id/kids1"
        android:layout_width="171dp"
        android:layout_height="228dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        app:srcCompat="@drawable/kids1" />

    <ImageView
        android:id="@+id/kids2"
        android:layout_width="138dp"
        android:layout_height="228dp"
        android:contentDescription="@string/todo21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        app:srcCompat="@drawable/kids2" />


</androidx.constraintlayout.widget.ConstraintLayout>